@@ -2,10 +2,17 @@ XXX, 2008 - pyclewn 0.5
     New features:
         New --window option for the console window location.
 
+    Changes:
+        The vim implementation of the netbeans "remove" function is buggy, and
+        has been fixed by patch 207 in vim 7.1. The workaround in pyclewn is to
+        insert a '\n' before the line to delete, and to delete both lines in one
+        shot. This workaround is not used when vim implements patch 207.
+
     Bug fixes:
         Avoid having Vim segfaults when stepping very fast with gdb, by the
         correct handling of the cursor position when restoring the cursor after
         an update of the gdb console.
+
         Enable a gdb command on the initial [No name] vim window.
 
 
