@@ -1,7 +1,9 @@
 $Id$
 
-2008-05-01  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2008-05-02  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* __init__.py dispatcher.py netbeans.py: Do not insert a '\n' before
+	invoking netbeans "remove" function.
 	* application.py dispatcher.py: Option for the console window
 	location.
 	* netbeans.py: Use netbeans keyAtPos events to store the current
